# 2gis-api-test

./: LICENSE  README.md  pyproject.toml
tests/: conftest.py  settings.py  test_auth.py  test_connection.py  test_favorites.py  test_load.py
